# rust-advent

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  pull_request_retrigger.txt  scaffold.mjs
.github/workflows/: PR-benchmark.yml  cargo-benchmark.yml  flamegraph.yml  post_to_pr.yaml  rust.yml  valgrind.yml
rpi-pico/rp2040-full/: Cargo.toml  README.md  input.txt  openocd.gdb
rpi-pico/rp2040-minimal/: Cargo.toml  link.x
rpi-pico/rp2040-minimal/.cargo/: config.toml
rpi-pico/rp2040-minimal/src/: main.rs
tools/: delta.py  flamegraph_comment_template.py  render_flamegraph.py  zoom_flamegraph.py
y2020/ex01/: Cargo.toml  README.md  input.txt
y2020/ex02/: Cargo.toml  README.md  input.txt
y2020/ex03/: Cargo.toml  README.md  input.txt
y2020/ex04/: Cargo.toml  README.md  input.txt
y2020/ex05/: Cargo.toml  README.md  input.txt
y2020/ex06/: Cargo.toml  README.md  input.txt
y2020/ex07/: Cargo.toml  README.md  input.txt
y2020/ex08/: Cargo.toml  README.md  input.txt
y2020/ex09/: Cargo.toml  README.md  input.txt
y2020/ex10/: Cargo.toml  README.md  input.txt
y2020/ex11/: Cargo.toml  README.md  input.txt
y2020/ex12/: Cargo.toml  README.md  input.txt
y2020/ex13/: Cargo.toml  README.md
y2020/ex14/: Cargo.toml  README.md  input.txt
y2020/ex15/: Cargo.toml  README.md  input.txt
y2020/ex15/benches/: bench_ex15.rs
y2020/ex15/src/: lib.rs
y2020/ex16/: Cargo.toml  README.md  input.txt
y2020/ex16/benches/: bench_ex16.rs
y2020/ex16/src/: lib.rs
y2020/ex17/: Cargo.toml  README.md
y2020/ex18/: Cargo.toml  README.md  input.txt
y2020/ex19/: Cargo.toml  README.md  input.txt
y2020/ex20/: Cargo.toml  README.md  input.txt
y2020/ex21/: Cargo.toml  README.md  input.txt
y2020/ex22/: Cargo.toml  README.md  input.txt
y2020/ex23/: Cargo.toml  README.md  input.txt
y2020/ex24/: Cargo.toml  README.md  input.txt
y2020/ex25/: Cargo.toml  README.md  input.txt
y2021/ex01/: Cargo.toml  README.md  input.txt
y2021/ex02/: Cargo.toml  README.md  input.txt
y2021/ex03/: Cargo.toml  README.md  input.txt
y2021/ex04/: Cargo.toml  README.md  input.txt
y2021/ex05/: Cargo.toml  README.md  input.txt
y2021/ex06/: Cargo.toml  README.md
y2021/ex07/: Cargo.toml  README.md  input.txt
y2021/ex08/: Cargo.toml  README.md  input.txt
y2021/ex09/: Cargo.toml  README.md
y2021/ex10/: Cargo.toml  README.md  input.txt
y2021/ex11/: Cargo.toml  README.md
y2021/ex12/: Cargo.toml  README.md  input.txt
y2021/ex13/: Cargo.toml  README.md  input.txt
y2021/ex14/: Cargo.toml  README.md  input.txt
y2021/ex15/: Cargo.toml  README.md  input.txt
y2021/ex16/: Cargo.toml  NOTES.md  README.md  input.txt
y2021/ex17/: Cargo.toml  README.md  input.txt
y2021/ex18/: Cargo.toml  README.md  input.txt
y2021/ex19/: Cargo.toml  README.md  helpers.py  input.txt
y2021/ex20/: Cargo.toml  README.md  input.txt
y2021/ex21/: Cargo.toml  README.md  input.txt
y2021/ex22/: Cargo.toml  README.md  input.txt
y2021/ex23/: Cargo.toml  README.md  input.txt
y2021/ex24/: Cargo.toml  README.md  input.txt
y2021/ex25/: Cargo.toml  README.md  input.txt
y2022/ex01/: Cargo.toml  README.md  input.txt
y2022/ex02/: Cargo.toml  README.md  input.txt
y2022/ex03/: Cargo.toml  README.md  input.txt
y2022/ex04/: Cargo.toml  README.md  input.txt
y2022/ex05/: Cargo.toml  README.md  input.txt
y2022/ex06/: Cargo.toml  README.md
y2022/ex07/: Cargo.toml  README.md  input.txt
y2022/ex08/: Cargo.toml  README.md  input.txt
y2022/ex09/: Cargo.toml  README.md  input.txt
y2022/ex10/: Cargo.toml  README.md  input.txt
y2022/ex11/: Cargo.toml  README.md  input.txt
y2022/ex12/: Cargo.toml  README.md  input.txt
y2022/ex13/: Cargo.toml  README.md  input.txt
y2022/ex14/: Cargo.toml  README.md  (+1 more)
y2022/ex15/: Cargo.toml  README.md
y2022/ex15/benches/: bench_y2022ex15.rs
y2022/ex15/src/: lib.rs  readings.rs
(+296 files in other folders)
