[workspace]
exclude = [
  "rpi-pico/rp2040-full",
  "rpi-pico/rp2040-minimal"
]
members = [
  "y2020/ex01",
  "y2020/ex02",
  "y2020/ex03",
  "y2020/ex04",
  "y2020/ex05",
  "y2020/ex06",
  "y2020/ex07",
  "y2020/ex08",
  "y2020/ex09",
  "y2020/ex10",
  "y2020/ex11",
  "y2020/ex12",
  "y2020/ex13",
  "y2020/ex14",
  "y2020/ex15",
  "y2020/ex16",
  "y2020/ex17",
  "y2020/ex18",
  "y2020/ex19",
  "y2020/ex20",
  "y2020/ex21",
  "y2020/ex22",
  "y2020/ex23",
  "y2020/ex24",
  "y2020/ex25",
  "y2021/ex01",
  "y2021/ex02",
  "y2021/ex03",
  "y2021/ex04",
  "y2021/ex05",
  "y2021/ex06",
  "y2021/ex07",
  "y2021/ex08",
  "y2021/ex09",
  "y2021/ex10",
  "y2021/ex11"
]

[profile.bench]
debug = true
