[workspace]
resolver = "2"
exclude = ["rpi-pico/rp2040-full", "rpi-pico/rp2040-minimal"]
members = [
    "y2020/ex01",
    "y2020/ex02",
    "y2020/ex03",
    "y2020/ex04",
    "y2020/ex05",
    "y2020/ex06",
    "y2020/ex07",
    "y2020/ex08",
    "y2020/ex09",
    "y2020/ex10",
    "y2020/ex11",
    "y2020/ex12",
    "y2020/ex13",
    "y2020/ex14",
    "y2020/ex15",
    "y2020/ex16",
    "y2020/ex17",
    "y2020/ex18",
    "y2020/ex19",
    "y2020/ex20",
    "y2020/ex21",
    "y2020/ex22",
    "y2020/ex23",
    "y2020/ex24",
    "y2020/ex25",
    "y2021/ex01",
    "y2021/ex02",
    "y2021/ex03",
    "y2021/ex04",
    "y2021/ex05",
    "y2021/ex06",
    "y2021/ex07",
    "y2021/ex08",
    "y2021/ex09",
    "y2021/ex10",
    "y2021/ex11",
    "y2021/ex12",
    "y2021/ex13",
    "y2021/ex14",
    "y2021/ex15",
    "y2021/ex16",
    "y2021/ex17",
    "y2021/ex18",
    "y2021/ex19",
    "y2021/ex20",
    "y2021/ex21",
    "y2021/ex22",
    "y2021/ex23",
    "y2021/ex24",
    "y2021/ex25",
    "y2022/ex01",
    "y2022/ex02",
    "y2022/ex03",
    "y2022/ex04",
    "y2022/ex05",
    "y2022/ex06",
    "y2022/ex07",
    "y2022/ex08",
    "y2022/ex09",
    "y2022/ex10",
    "y2022/ex11",
    "y2022/ex12",
    "y2022/ex13",
    "y2022/ex14",
    "y2022/ex15",
    "y2022/ex25",
    "y2023/ex01",
    "y2023/ex02",
    "y2023/ex03",
    "y2023/ex04",
    "y2023/ex05",
    "y2023/ex06",
    "y2023/ex07",
    "y2023/ex08",
    "y2023/ex09",
    "y2023/ex10",
    "y2023/ex11",
    "y2023/ex12",
    "y2023/ex13",
]

[profile.bench]
debug = true
