[package]
name = "rp2040-minimal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
y2021ex06 = { path = "../../y2021/ex06" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "rp2040-minimal"
path = "src/main.rs" 
