[package]
name = "ex15"
version = "0.1.0"
authors = ["Luciano Mammino <luciano.mammino@fourtheorem.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_ex15"
harness = false