[package]
name = "ex16"
version = "0.1.0"
authors = ["Luciano Mammino <luciano.mammino@fourtheorem.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_ex16"
harness = false