[package]
name = "y2022ex15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nom = "7.1.1"
regex = "1.7.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_y2022ex15"
harness = false
